--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>ness-syslog4j</artifactId>
-  <version>0.9.47-NESS-9-SNAPSHOT</version>
+  <version>0.9.47-NESS-9-jk1</version>
   <packaging>jar</packaging>
   <name>syslog4j, Ness Computing style</name>
   <url>http://www.syslog4j.org</url>
